@@ -1,6 +1,7 @@
 Version 0.8 -- Subversion
 -----------------
 * Rewrote all content handling from scratch for better expandibility
+* Admin and default website are totally xhtml 1.0 transitional compliant
 
 Version 0.7.3 -- Tue Nov 23 2004
 -----------------
